# duckydd

./: .gitignore  README.md  duckydd.toml  meson.build
include/: io.h  mbuffertemplate.h
lib/: meson.build
src/: io.c  logkeys.c  main.c  meson.build  signalhandler.c  udev.c
